--- a/app/src/main/res/layout/activity_note.xml
+++ b/app/src/main/res/layout/activity_note.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.qingyu.qnote.AddNoteActivity">
+    tools:context="com.qingyu.qnote.NoteActivity">
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab_save"
         android:layout_width="wrap_content"
@@ -27,12 +27,14 @@
         <EditText
             android:id="@+id/edText_content"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:padding="10dp"/>
         <TextView
             android:id="@+id/txView_sign"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="right"
-            android:text="By Qingyu"/>
+            android:text="By QingYu"
+            android:paddingRight="10dp"/>
     </LinearLayout>
 </android.support.design.widget.CoordinatorLayout>
