--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -12,8 +12,12 @@
     tools:context="com.qingyu.qnote.MainActivity"
     tools:showIn="@layout/activity_main">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <ListView
+        android:id="@+id/note_listview"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
+        android:transcriptMode="alwaysScroll"
+        android:layout_marginTop="1dp"
+        android:layout_weight="1">
+    </ListView>
 </RelativeLayout>
